tests/fixtures/negative/style/UselessCallOnNotNull.kt
package fixtures.negative.style

fun safe(nullableStr: String?): String {
    return nullableStr?.orEmpty() ?: ""
}
